# shadow-hunters

./: Cargo.toml  docker-compose.yaml  shadow-hunters.code-workspace
back/: Cargo.toml
back/src/: characters.rs  lib.rs  locations.rs  main.rs  old_server.rs  state.rs
console-front/: Cargo.toml
console-front/src/: main.rs
engine/: Cargo.toml
engine/src/: dice.rs  lib.rs  main.rs  state.rs
engine/src/characters/: mod.rs
engine/src/game_logic/: dice.rs  mod.rs
engine/src/locations/: cemetry.rs  church.rs  erstwhile_altar.rs  hermits_cabin.rs  mod.rs  underworld_gate.rs  weird_woods.rs
engine/src/state/: character.rs  location.rs  locations.rs  mod.rs
engine/src/state/characters/: mod.rs
engine/src/state/locations/: cemetry.rs  church.rs  erstwhile_altar.rs  hermits_cabin.rs  mod.rs  underworld_gate.rs  weird_woods.rs
front/: .gitignore  Cargo.toml  Dockerfile  entrypoint.sh
nginx-dev/: Dockerfile  reverse-proxy.conf
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/state/: character.rs  location.rs  mod.rs  player.rs
