[package]
name = "shadow-hunters"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
axum = { version = "0.5", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
engine = { path = '../engine' }
