[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
serde = { version = "1", features = ["derive"] }
anyhow = "1.0"
async-trait = "0.1"
rand = { version = "0.8" }
tokio = { version = "1", features = ['full'] }
shared = { path = "../shared" }